@@ -37,10 +37,8 @@ public:
   virtual ~CDVDDemuxSPU();
 
   CSPUInfo* AddData(BYTE* data, int iSize, __int64 pts); // returns a packet from ParsePacket if possible
-  //void FreePacket(SPUInfo* pSPUInfo);
 
   CSPUInfo* ParseRLE(CSPUInfo* pSPU, BYTE* pUnparsedData);
-  // void RenderI420(DVDVideoPicture* pPicture, SPUInfo* pSPU, bool b_crop);
 
   // m_clut set by libdvdnav once in a time
   // color lokup table is representing 16 different yuv colors
@@ -49,7 +47,7 @@ public:
   bool m_bHasClut;
 
 protected:
-  CSPUInfo* ParsePacket(SPUData* pSPUData); // return value should be manualy freed with FreePacket
+  CSPUInfo* ParsePacket(SPUData* pSPUData);
 
   SPUData m_spuData;
 };
