@@ -798,12 +798,10 @@ bool CDVDInputStreamNavigator::GetCurrentButtonInfo(CDVDOverlaySpu* pOverlayPict
 
   if (m_dll.dvdnav_get_button_info(m_dvdnav, alpha, color) == 0)
   {
-  /*
-    int* a = pOverlayPicture->alpha;
-    
-    // we could also check the alpha from dvdnav_get_button_info
-    // by checking if one of those values are valid (!0) and set them
-    if (!a[0] && !a[1] && !a[2] && !a[3])*/
+
+    // check if libdvdnav provided us correct alpha values
+    int* a = alpha[iButtonType];
+    if (a[0] || a[1] || a[2] || a[3])
     {
       pOverlayPicture->alpha[0] = alpha[iButtonType][0];
       pOverlayPicture->alpha[1] = alpha[iButtonType][1];
@@ -811,11 +809,9 @@ bool CDVDInputStreamNavigator::GetCurrentButtonInfo(CDVDOverlaySpu* pOverlayPict
       pOverlayPicture->alpha[3] = alpha[iButtonType][3];
     }
     
-    int i;
-    for (i = 0; i < 3; i++) pOverlayPicture->color[0][i] = pSPU->m_clut[color[iButtonType][0]][i];
-    for (i = 0; i < 3; i++) pOverlayPicture->color[1][i] = pSPU->m_clut[color[iButtonType][1]][i];
-    for (i = 0; i < 3; i++) pOverlayPicture->color[2][i] = pSPU->m_clut[color[iButtonType][2]][i];
-    for (i = 0; i < 3; i++) pOverlayPicture->color[3][i] = pSPU->m_clut[color[iButtonType][3]][i];
+    for (int i = 0; i < 3; i++)
+      for (int j = 0; j < 3; j++)
+        pOverlayPicture->color[i][j] = pSPU->m_clut[color[iButtonType][i]][j];
   }
   
   if (DVDNAV_STATUS_OK == m_dll.dvdnav_get_highlight_area(m_dll.dvdnav_get_current_nav_pci(m_dvdnav), iButton, iButtonType, &hl))
