@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 20-12-2005 fixed: some menu overlays did not display properly or not at all in the dvdplayer
  - 19-12-2005 changed: tuned FF/RW for dvdplayer (only enabled in debug builds)
  - 19-12-2005 fixed/changed: dvdplayer reported wrong total time for movie / dvdplayer now uses libdvdnav's time seek for seeking
  - 19-12-2005 fixed: [ 1378710 ] DVDplayer crash when swithing from fullscreen to thumbnail 
